--- a/myapp/templates/myapp/client_management.html
+++ b/myapp/templates/myapp/client_management.html
@@ -2,7 +2,7 @@
 {% block title %}Client Management Portal - Minet Insurance{% endblock %}
 {% block content %}
 <div class="main-area">
-    <h1>The Verse - Acme_Brokers Dashboard</h1>
+    <h1>Brokers Dashboard</h1>
     <h2>Client Management Portal</h2>
     <div class="client-card">
         <div class="section-block">
