--- a/myapp/templates/myapp/data_cleaning.html
+++ b/myapp/templates/myapp/data_cleaning.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="main-area">
-    <h1>The Verse - Acme_Brokers Dashboard</h1>
+    <h1>Brokers Dashboard</h1>
     <h2>Data Cleaning & Preparation</h2>
 
     <div class="cleaning-section">
