--- a/myapp/templates/myapp/base1.html
+++ b/myapp/templates/myapp/base1.html
@@ -701,8 +701,8 @@
             </a>
             <ul class="sub-tabs">
               <li>
-                <a href="{% url 'forecasted_volume' %}"
-                  ><i class="fas fa-chart-area"></i> Basic view</a
+                <a href="{% url 'safaricom_basic_forecast' %}"
+                  ><i class="fas fa-chart-area"></i> Baseline Forecast</a
                 >
               </li>
               <li>
@@ -717,7 +717,7 @@
               </li>
               <li>
                 <a href="{% url 'impact_simulation' %}"
-                  ><i class="fas fa-project-diagram"></i> scenario Simulation</a
+                  ><i class="fas fa-project-diagram"></i> Scenario Simulation</a
                 >
               </li>
               <li>
